# Fortran-gym

./: LICENSE
OOP/fortran03/: CMakeLists.txt  shape.f90  shape_module.f90
OOP/fortran03/modules/: shape_module.f90
OOP/fortran90/: shape.f90  shape_module.f90
arrays/dynamic/: blas_operations.f90
arrays/static/: blas_operations.f90  construction.f90  inquiry.f90  reductions.f90  static_arrays.f90
basics/: add_number.f90  constants.f90  data_types.f90  factorial.f90  hello.f90  strings.f90
derived_types/: derived_types.f90  lists.f90
pointers/: pointers_lists.f90  pointers_simple.f90
